nested-stacks/ecs/infra/vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::LanguageExtensions
Description: VPC template for infra 

Parameters:
  ProjectName:
    Description: Enter project Name
    Type: String

  Env:
    Description: Enter dev, prod, test
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - prod
      - test
  
  VpcCidr:
    Description: Enter VPC CIDR
    Type: String
    Default: 10.0.0.0/16

Mappings:
  AzMap:
    a:
      pub: 0
      priv: 1
    b:
      pub: 2
      priv: 3

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: Stack
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-vpc
  
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-igw

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  
  NatGateWay:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubneta
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-nat

  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-public-rt

  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-private-rt

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRT

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRT
      NatGatewayId: !Ref NatGateWay
      DestinationCidrBlock: 0.0.0.0/0

  Fn::ForEach::AZ:
    - az
    - [a, b]

    - PublicSubnet${az}:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Sub ${AWS::Region}${az}
          CidrBlock: !Select 
            - !FindInMap [AzMap, !Ref az, pub]
            - !Cidr [ !Ref VpcCidr, 4, 8 ]
          Tags:
            - Key: Name
              Value: !Sub ${ProjectName}-${Env}-public-${az}-subnet

      PrivateSubnet${az}:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Sub ${AWS::Region}${az}
          CidrBlock: !Select 
            - !FindInMap [AzMap, !Ref az, priv]
            - !Cidr [ !Ref VpcCidr, 4, 8 ]
          Tags:
            - Key: Name
              Value: !Sub ${ProjectName}-${Env}-private-${az}-subnet

      PublicSubnetAssociation${az}:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !Ref PublicRT
          SubnetId: !Ref
            "Fn::Sub": PublicSubnet${az}

      PrivateSubnetAssociation${az}:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !Ref PrivateRT
          SubnetId: !Ref 
            "Fn::Sub": PrivateSubnet${az}

Outputs:
  Cidr:
    Description: The VPC CIDR block
    Value: !Ref VpcCidr

  VpcId:
    Description: The VPC ID
    Value: !Ref VPC

  Fn::ForEach::AZOutput:
    - az
    - [a, b]

    - PublicSubnet${az}Id:
        Description: The Public Subnet ID for AZ ${az}
        Value:
          Ref: 
            "Fn::Sub": PublicSubnet${az}

      PrivateSubnet${az}Id:
        Description: The Private Subnet ID for AZ ${az}
        Value:
          Ref:
            "Fn::Sub": PrivateSubnet${az}
